--- a/app/src/main/res/layout/activity_camera2.xml
+++ b/app/src/main/res/layout/activity_camera2.xml
@@ -10,18 +10,77 @@
             android:id="@+id/surface_view_camera2_activity"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
-
-        <ImageView
-            android:id="@+id/iv_show_camera2_activity"
-            android:layout_width="142dp"
-            android:layout_height="138dp"
             android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="0dp" />
+
+        <ImageButton
+            android:id="@+id/ib_takephoto_cancel"
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="17dp"
-            android:layout_marginLeft="17dp"
-            android:layout_marginBottom="46dp"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
+            android:layout_centerHorizontal="true"
+            app:srcCompat="@android:drawable/btn_star" />
+
+        <LinearLayout
+            android:id="@+id/block_recognize_result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="66dp"
+            android:layout_toStartOf="@+id/iv_show_camera2_activity"
+            android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/iv_show_camera2_activity"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentBottom="true"
+                    tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+                <LinearLayout
+                    android:id="@+id/block_text_result"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="20dp"
+                    android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_category"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="4dp"
+                            android:text="TextView"
+                            android:textColor="@android:color/white" />
+
+                        <TextView
+                            android:id="@+id/tv_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="4dp"
+                            android:text="TextView"
+                            android:textColor="@android:color/white"
+                            android:textSize="18dp" />
+
+                        <TextView
+                            android:id="@+id/tv_alias"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="4dp"
+                            android:text="TextView"
+                            android:textColor="@android:color/white" />
+
+                        <TextView
+                            android:id="@+id/tv_english_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="TextView"
+                            android:textColor="@android:color/white" />
+                </LinearLayout>
+
+        </LinearLayout>
+
 </RelativeLayout>
